--- a/MINOR.ipynb
+++ b/MINOR.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,12 +23,16 @@
     "ecg_cat=ecg_data.iloc[:,-1]\n",
     "from sklearn.preprocessing import LabelEncoder\n",
     "encoder=LabelEncoder()\n",
-    "ecg_cat_1hot=encoder.fit_transform(ecg_cat)"
+    "ecg_cat_1hot=encoder.fit_transform(ecg_cat)\n",
+    "\n",
+    "#adding encoded to the original data\n",
+    "ecg_data.drop(ecg_data.columns[100], axis=1, inplace=True)\n",
+    "ecg_data[100]=ecg_cat_1hot"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,6 +55,255 @@
     "\n",
     "strat_train_set.to_csv(r\"datasets/ecg/ecg_train.csv\", index=None, header=True)\n",
     "strat_test_set.to_csv(r\"datasets/ecg/ecg_test.csv\", index=None, header=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#data and label separation\n",
+    "y_train=strat_train_set.iloc[:,-1].copy()\n",
+    "x_train=strat_train_set.drop(strat_train_set.columns[100], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.76239811, 0.76317367, 0.78088925])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#SGD CLASSIFIER cross-val score\n",
+    "\n",
+    "from sklearn.model_selection import cross_val_score\n",
+    "from sklearn.linear_model import SGDClassifier\n",
+    "sgd_clf=SGDClassifier(random_state=42, max_iter=5, tol=-np.infty)\n",
+    "cross_val_score(sgd_clf, x_train, y_train, cv=3, scoring=\"accuracy\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.96662443, 0.96648571, 0.96540267])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Random Forest cross-val score\n",
+    "\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "rand_forest=RandomForestClassifier(n_estimators=100)\n",
+    "cross_val_score(rand_forest, x_train, y_train, cv=3, scoring=\"accuracy\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.93484143, 0.93482095, 0.93412804])"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Decision Tree cross-val score\n",
+    "\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "dec_tree=DecisionTreeClassifier()\n",
+    "cross_val_score(dec_tree, x_train, y_train, cv=3, scoring=\"accuracy\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "SGDClassifier(alpha=0.0001, average=False, class_weight=None,\n",
+       "       early_stopping=False, epsilon=0.1, eta0=0.0, fit_intercept=True,\n",
+       "       l1_ratio=0.15, learning_rate='optimal', loss='hinge', max_iter=5,\n",
+       "       n_iter=None, n_iter_no_change=5, n_jobs=None, penalty='l2',\n",
+       "       power_t=0.5, random_state=42, shuffle=True, tol=-inf,\n",
+       "       validation_fraction=0.1, verbose=0, warm_start=False)"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#sgd classifier training\n",
+    "\n",
+    "sgd_clf.fit(x_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.7892621664050236\n"
+     ]
+    }
+   ],
+   "source": [
+    "#sgd scores on same train set\n",
+    "\n",
+    "pred=sgd_clf.predict(x_train)\n",
+    "correct=sum(pred==y_train)\n",
+    "print(correct/len(pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "RandomForestClassifier(bootstrap=True, class_weight=None, criterion='gini',\n",
+       "            max_depth=None, max_features='auto', max_leaf_nodes=None,\n",
+       "            min_impurity_decrease=0.0, min_impurity_split=None,\n",
+       "            min_samples_leaf=1, min_samples_split=2,\n",
+       "            min_weight_fraction_leaf=0.0, n_estimators=100, n_jobs=None,\n",
+       "            oob_score=False, random_state=None, verbose=0,\n",
+       "            warm_start=False)"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#random forest training\n",
+    "\n",
+    "rand_forest.fit(x_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "#random forest scores on same train set\n",
+    "\n",
+    "pred=rand_forest.predict(x_train)\n",
+    "correct=sum(pred==y_train)\n",
+    "print(correct/len(pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DecisionTreeClassifier(class_weight=None, criterion='gini', max_depth=None,\n",
+       "            max_features=None, max_leaf_nodes=None,\n",
+       "            min_impurity_decrease=0.0, min_impurity_split=None,\n",
+       "            min_samples_leaf=1, min_samples_split=2,\n",
+       "            min_weight_fraction_leaf=0.0, presort=False, random_state=None,\n",
+       "            splitter='best')"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#decision tree training\n",
+    "\n",
+    "dec_tree.fit(x_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "#decision tree scores on same train set\n",
+    "\n",
+    "pred=dec_tree.predict(x_train)\n",
+    "correct=sum(pred==y_train)\n",
+    "print(correct/len(pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "\n",
+    "#dump sgd classifier\n",
+    "pickle.dump(sgd_clf, open(\"Saved Models/sgd.sav\", 'wb'))\n",
+    "\n",
+    "#dump randomforest classifier\n",
+    "pickle.dump(rand_forest, open(\"Saved Models/randomforest.sav\", 'wb'))\n",
+    "\n",
+    "#dump decisiontree classifier\n",
+    "pickle.dump(dec_tree, open(\"Saved Models/decisiontree.sav\", 'wb'))"
    ]
   },
   {
